# beam-ui

./: .gitignore  .gitmodules  .travis.yml  .travis_no_build.yml  CMakeLists.txt  README.md  TERMS.rtf  TERMS.txt  appveyor.yml  appveyor_no_build.yml  beam_version.gen  macos_cert.tar.enc  notarize.sh  version.h.in
ui/: BeamWallet.entitlements  CMakeLists.txt  Info.plist.in  QtWebEngineProcess.entitlements  beam.desktop.in  beam.rc.in  crowdin.yml  dapps_store_app.wasm  ui.cpp  x-beam-dapp.xml
ui/apps/dappnet/: beam-asset-minter.dapp  beam-bridge-app.dapp  dao-core-app.dapp  dao-voting-app.dapp
ui/apps/mainnet/: accum-dapp.dapp  asset-minter-app.dapp  beam-asset-minter.dapp  beam-bridge-app.dapp  beam-bridge-reverse-app.dapp  dao-core-app.dapp  dao-voting-app.dapp  dao-voting.dapp  nft-marketplace.dapp
ui/apps/masternet/: dao-core-app.dapp  dao-voting-app.dapp
ui/apps/testnet/: beam-bridge-app.dapp  dao-core-app.dapp  dao-voting-app.dapp
ui/i18n/: ar_SA.ts  be-BY.ts  be_BY.ts  cs_CZ.ts  de-DE.ts  de_DE.ts  en_US.ts  es-ES.ts  es_ES.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  id_ID.ts  import.py  it_IT.ts  ja-JP.ts  ja_JP.ts  ko_KR.ts  nl-NL.ts  nl_NL.ts  pt_BR.ts  rs_RS.ts  ru_RU.ts  sr_SP.ts  sr_SR.ts  sv-SE.ts  sv_SE.ts  th-TH.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  vi_VI.ts  vi_VN.ts  zh_CN.ts
ui/icons/: beam_beamX.icns  beam_dappnet.icns
ui/model/: app_model.cpp  app_model.h  asset_object.cpp  asset_object.h  assets_list.cpp  assets_list.h  assets_manager.cpp  assets_manager.h  exchange_rates_manager.cpp  exchange_rates_manager.h  filter.cpp  filter.h  helpers.h  messages.cpp  messages.h  node_model.cpp  node_model.h  qr.cpp  qr.h  settings.cpp  settings.h  swap_coin_client_model.cpp  swap_coin_client_model.h  swap_eth_client_model.cpp  swap_eth_client_model.h  translator.cpp  wallet_model.cpp  wallet_model.h
ui/view/: CheckRecoveryPhrase.qml  GenerateRecoveryPhrase.qml  Settings.qml  accept_asset_swap.qml  addresses.qml  applications.qml  applications_nofork.qml  assets_swap.qml  assets_swap_confirm.qml  atomic_swap.qml  beam_chat.qml  beam_messenger.qml  create_asset_swap.qml  create_atomic_swap.qml  dex.qml  loading.qml  main.qml  notifications.qml  popup_message.qml  qml.qrc  qmldir  receive_regular.qml  receive_swap.qml  root.qml  send.qml  send_confirm.qml  send_expired.qml  send_regular.qml  send_swap.qml  settings.qml  start.qml  swap_confirm.qml  utils.js  utxo.qml  wallet.qml  web_view_watcher.js
ui/view/applications/: AppButton.qml  AppDetails.qml  AppInfoPanel.qml  AppPanel.qml  AppView.qml  AppsList.qml  BecomePublisher.qml  PublisherDetails.qml  PublishersList.qml  TransactionIsSent.qml  UploadDApp.qml  YouArePublisher.qml  applications.qml  applications_nofork.qml
ui/view/assets/: appempty.script  apperror.html
ui/view/color_themes/: AbstractColors.qml  AbstractTheme.qml  BeamX.qml  Dappnet.qml  Mainnet.qml  Masternet.qml  Testnet.qml
ui/view/controls/: AddressComboBox.qml  AddressQRDialog.qml  AddressTable.qml  AlphaTip.qml  AlphaTipPopup.qml  AmountInput.qml  AppTxNotification.qml  AvailablePanel.qml  BaseNotification.qml  BeamAmount.qml  BgLogo.qml  ChangePasswordDialog.qml  CheckRecoveryPhrase.qml  ConfirmPasswordDialog.qml  ConfirmRefreshDialog.qml  ConfirmationDialog.qml  ContextMenu.qml  CustomButton.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomDialog.qml  CustomProgressBar.qml  CustomRadioButton.qml  CustomScrollBar.qml  CustomSecondCurrencySwitch.qml  CustomSwitch.qml  CustomTableView.qml  CustomToolButton.qml  CustomToolTip.qml  CustomTripleSwitch.qml  DAppInstallErrors.qml  DeleteAddress.qml  DeleteContact.qml  DnDdappInstallDialog.qml  EditAddress.qml  ExpandableRowDelegate.qml  ExternalNodeStatus.qml  FeeInput.qml  FeeSlider.qml  FoldablePanel.qml  (+84 more)
ui/view/dapps_store/: dapps_store.qml
ui/view/dex/: MarketPanel.qml  MarketTable.qml
ui/view/start_wizzard/: AccountLabelPage.qml  AccountSetup.qml  CheckRecoveryPhrase.qml  CreateNewWalletPage.qml  CreatePasswordPage.qml  CreateTrezorWalletPage.qml  GenerateRecoveryPhrase.qml  ImportTrezorOwnerKeyPage.qml  MigrateWalletPage.qml  NodeSetupPage.qml  OpenWalletPage.qml  RestoreWalletPage.qml  SelectWalletDBPage.qml  StartLayout.qml  WalletStartPage.qml  WizzardPage.qml
ui/view/wallet/: AmountTip.qml  AssetInfo.qml  AssetTip.qml  AssetsConnect.qml  AssetsPanel.qml  AssetsPanel_copy.qml  AvailablePanel.qml  AvailablePanelNew.qml  CoinsList.qml  InProgressPanelNew.qml  MainInfoPanel.qml  SeedValidationPanel.qml  TransactionDetails.qml  TransactionDetailsPopup.qml  TransactionsSearchHighlighter.qml  TxTable.qml
ui/viewmodel/: address_book_view.cpp  address_book_view.h  address_item.cpp  address_item.h  asset_swap_accept_view.cpp  asset_swap_accept_view.h  asset_swap_create_view.cpp  asset_swap_create_view.h  currencies.cpp  currencies.h  el_seed_validator.cpp  fee_helpers.cpp  fee_helpers.h  loading_view.cpp  loading_view.h  main_view.cpp  main_view.h  messages_view.cpp  messages_view.h  messenger_address_add.cpp  messenger_address_add.h  messenger_chat.cpp  messenger_chat.h  messenger_chat_list.cpp  messenger_chat_list.h  payment_item.cpp  payment_item.h  primary_screen_observer.cpp  primary_screen_observer.h  qml_globals.cpp  qml_globals.h  receive_swap_view.cpp  receive_swap_view.h  receive_view.cpp  receive_view.h  send_swap_view.cpp  send_swap_view.h  send_view.cpp  send_view.h  settings_helpers.cpp  (+13 more)
ui/viewmodel/applications/: apps_api.cpp  apps_api.h  apps_api_client.cpp  apps_api_client.h  apps_api_ui.cpp  apps_api_ui.h  apps_server.cpp  apps_server.h  apps_view.cpp  apps_view.h  consent_handler.h  public.cpp  public.h  publishers_view.cpp  publishers_view.h  shaders_manager.cpp  shaders_manager.h  webapi_beam.cpp  webapi_beam.h  webapi_creator.cpp  webapi_creator.h  webapi_shaders.cpp  webapi_shaders.h
ui/viewmodel/assets_swap/: asset_swap_orders_list.cpp  asset_swap_orders_list.h  asset_swap_orders_model.cpp  asset_swap_orders_model.h
ui/viewmodel/atomic_swap/: seed_phrase_item.cpp  seed_phrase_item.h  swap_eth_settings_item.cpp  swap_eth_settings_item.h  swap_offer_item.cpp  (+15 more)
(+65 files in other folders)
